typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode1.ts.stderr
error: UndefinedSymbol {
    sym: Atom('foo1' type=inline),
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            4,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode1.ts:1:1
  |
1 | foo1();
  | ^^^^

error: UndefinedSymbol {
    sym: Atom('foo1' type=inline),
    span: Span {
        lo: BytePos(
            9,
        ),
        hi: BytePos(
            13,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode1.ts:2:1
  |
2 | foo1();
  | ^^^^

error: UndefinedSymbol {
    sym: Atom('foo1' type=inline),
    span: Span {
        lo: BytePos(
            18,
        ),
        hi: BytePos(
            22,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode1.ts:3:1
  |
3 | foo1();
  | ^^^^

error: UndefinedSymbol {
    sym: Atom('static' type=static),
    span: Span {
        lo: BytePos(
            27,
        ),
        hi: BytePos(
            33,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode1.ts:4:1
  |
4 | static();
  | ^^^^^^

